src/db/migration/sea_orm/collation/snapshots/roadster__db__migration__sea_orm__collation__tests__create_case_insensitive_collation_for_db_backend@case_01.snap
---
source: src/db/migration/sea_orm/collation/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "CREATE COLLATION IF NOT EXISTS case_insensitive (\nprovider = icu,\nlocale = 'und-u-ks-level2',\ndeterministic = false\n);\n",
        values: None,
        db_backend: Postgres,
    },
)
