src/db/migration/sea_orm/collation/snapshots/roadster__db__migration__sea_orm__collation__tests__drop_case_insensitive_collation_for_db_backend@case_1.snap
---
source: src/db/migration/sea_orm/collation/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "DROP COLLATION IF EXISTS case_insensitive;",
        values: None,
        db_backend: Postgres,
    },
)
